# py-drivesdk

./: .gitignore  .readthedocs.yaml  README.md  TODO.md  __init__.py  const.py  controller.py  errors.py  msgs.py  pyproject.toml  readAnki.py  scanner.py  setup.cfg  track_pieces.py  util.py  utils.py  vehicle.py
.github/workflows/: pylint.yml  python-app.yml
NichtRammen/: pygameTest.py
UiCode/: Ui copy.py  Ui.py
anki/: __init__.py  errors.py  msgs.py  vehicle.py
anki/control/: controller.py  scanner.py  vehicle.py
anki/misc/: const.py  lanes.py  msg_protocol.py  msgs.py  track_pieces.py
anki/misc/deprecated_alias/: __init__.py  alias.py
anki/utility/: const.py  lanes.py  msgs.py  track_pieces.py  util.py
anki/utility/deprecated_alias/: __init__.py  __main__.py  alias.py
anki/utils/: __init__.py  handlers.py  references.py
control/: controller.py  scanner.py
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  install.rst
examples/NichtRammen/: DONTCollideA4V0 lane.py  DONTCollideA4V0.py  DONTCollideRaceA3V0 copy.py  DontColideMany.py  DontCollideNew.py
examples/Ui code/: Ui.py  shiftRegister.py
examples/UiCode/: Map.txt  Ui copy 2.py  Ui copy.py  Ui.py  UiCodeRedo  UiCodeRedo.py  VisMapGenerator.py  Vismap.txt  examplemap.py  indexSucheTest.py
examples/basic/: SehrVieleAutos.py  basic_lanes.py  basic_multi.py  basic_round.py  basic_scanner.py  basic_single.py
examples/lanes/: insideLine.py
examples/web_ui/: app.py  car.py  config.json
examples/web_ui/templates/: car_dashboard.html
examples/web_ui/web/templates/: index.html
utility/: lanes.py  track_pieces.py  util.py
