[project]
name = "py-drivesdk"
version = "1.0"
authors = [
    {name="Pascal Rombach"},
    {name="jateute"},
    {name="Felix Albrecht"}
]
description = "Object oriented library for controlling Anki Overdrive vehicles"
requires-python = ">=3.10"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: OS Independent",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = [
    "Anki Overdrive",
    "Anki"
]

dependencies = [
    "bleak"
]

[project.urls]
"Documentation" = "https://py-drivesdk.readthedocs.io"
"Homepage" = "https://github.com/HHG-TecLap/py-drivesdk"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"