[metadata]
name = py-drivesdk
version = 0.9.1
description = Object oriented library for controlling Anki Overdrive vehicles
classifiers = 
    Programming Language :: Python :: 3.10

[options]
packages = 
    anki
    anki/control
    anki/utility
install_requires = 
    bleak
    importlib-metadata; python_version >= "3.10"