[metadata]
name = py-drivesdk
version = 1.0.3
description = Object oriented library for controlling Anki Overdrive vehicles
classifiers = 
    Programming Language :: Python :: 3.10

[options]
install_requires = 
    bleak
    importlib-metadata; python_version >= "3.10"
packages =
    anki
    anki/control
    anki/misc